Convert API routes to ESM and update Redis integration

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "ru-tetris-online",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {},
-  "license": "UNLICENSED"
   "name": "ru-tetris",
   "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "dependencies": {
     "@upstash/redis": "^1.28.4"
-}
+  }
 }
